2011-11-14 15:06 Duan Pengfei<bestdpf@gmail.com>
seu3d-1.0.32
delete some chinese characters in the source code, i don't know how much
chinese characters should be delete in future.
2011-11-14 14:41 Duan Pengfei<bestdpf@gmail.com>
seu3d-1.0.31
remove some unused classes in controller
2011-10-28 14:25 Duan Pengfei<bestdpf@gmail.com>
seu3d-1.0.30
clean data dir
2011-10-28 14:07 Duan Pengfei<bestdpf@gmail.com>
seu3d-1.0.29
complete remove class BasicKick and BasicKick.*
2011-10-27 15:32
seu3d-1.0.28
complete remove class Kick and Kick.h
2011-9-24 11:41 Duan Pengfei<bestdpf@gmail.com>
seu3d-1.0.27
we found that when we test the source code in multi-machines, it is very easy
that the agent is disconnected with the sever. We think, the bug comes from
the change of multi-threads in early days before. I only wrote test source
that time, now I write it more regularly.
But works need to do to test bugs.
2011-9-23 14:23 Duan Pengfei<bestdpf@gmail.com>
seu3d-1.0.26
add a bool value in WalkRel.
In old source code, TT writes stop() not very good, I add a mMustStop to work
with TT's mShouldStop, then when we should stop, we must take a more step, in
order to keep blance;
But it needs to be tested, and it works not clearly in low speed walking, but
when speed is very fast, it is very fine, I think.
2011-9-22 20:09 Duan Pengfei<bestdpf@gmail.com>
seu3d-1.0.25
clear the some unused funtions in task dir. I try to make the walking code
clear to be read, but more works are needed in the future;
2011-9-15 22:25 Duan Pengfei<bestdpf@gmail.com>
seu3d-1.0.24
correct the wrong name mGameSate to mGameState in Perception.*
2011-9-15_12:32 Zhao Bolu<zhaobl880704@gmail.com>
seu3d-1.0.23-25
change build.sh to build-agent.sh
remove "RedSun" in some scripts
change TeamPlayer.cpp, if gameover it still playPlayOn
delete CNChangeLog
2011-9-11 23:54 Duan Pengfei<bestdpf@gmail.com>
version seu3d-1.0.22
fix a bug that percetion is dropped because of the wrong code:
about the bug:
err output is :