@@ -1,14 +1,12 @@
-Team members(authors) of SEU:
-
-许 元 Xu Yuan <xuyuan@gmail.com>
-时长娥 Shi Chang'e <evelinesce@yahoo.com.cn>
-蒋春露 Jiang Chunlu <jamacewatermelon@gmail.com>
-王 魏 Wang Wei
-陈 思 Chen Si
-蒋 鸿 Jiang Hong
-赵徐庆 Zhao Xuqing
-
-Supervisors:
-
-许映秋 Xu Yingqiu
-谈英姿 Tan Yingzi
+RoboCup 3D Simulation Team, Southeast University, China
+Research Coordinator: TAN Yingzi
+Team Coordinator:     XU Yingqiu
+Team Members:
+	2005.   XU Yuan, SHI Chang'e
+	2006.   XU Yuan, JIANG Chunlu, WANG Qiang
+	2007.   XU Yuan, ZHAO Xuqing, CHEN Si, JIANG Hong, SHENG Hui, QIAN Chen, CHEN Tianhao, XU Xiaoli
+	2008.   XU Yuan, CHEN Si, HU Ming, HUANG Ru, YU Honglin
+	2009.   ZHOU Yanjun, CHEN Si, YI Yimin
+	2010.   ZHAO Bolu, WANG Sitan, GUO XiaXia, YI Yimin, YU Xiapfan
+	2011.   ZHAO Bolu, WANG Sitan, DUAN Pengfei, ZHONG Li, LI Ge, ZHAO Yue, WANG Chenyang,YOU Weiwei,CHEN Liang
+Team Email: seu3dteam@gmail.com
