@@ -104,11 +104,11 @@ namespace configuration {
                 "          Sheng Hui, Qian Chen, Chen Tianhao, Xu Xiaoli\n"
                 "  2008.   Xu Yuan, Chen Si, Hu Ming, Huang Ru, Yu Honglin\n"
                 "  2009.   Zhou Yanjun, Chen Si, Yi Yimin\n"
-                "  2010.   Zhao Bolu, Wang Sitan, Guo XiaXia, Yu Xiapfan, etc.\n"
-                "  2011.   Zhao Bolu, Wang Sitan, Zhong Li, Li Ge, Chen Liang, Zhao Yue, Duan Pengfei, Wang Chenyang, You Weiwei,etc.\n"
+                "  2010.   Zhao Bolu, Wang Sitan, Guo XiaXia, Yi Yimin, Yu Xiapfan\n"
+                "  2011.   Zhao Bolu, Wang Sitan, Duan Pengfei, Zhong Li,Li Ge,Zhao Yue,Wang Chenyang,You Weiwei,Chen Liang\n"
                 "  All rights reserved, see README for more information.     \n"
                 "--------------------------------------------------------------------------\n"
-                "  Version: ""seu-spark-iran2010""\n"
+                "  Version: ""seu-spark-opensource2011""\n"
                 "  Build Time: "__DATE__" -- "__TIME__"\n"
                 "--------------------------------------------------------------------------\n"
                 << std::endl;
