@@ -21,84 +21,144 @@
 ;  rsg/agent/soccerbot058/soccerbot.rsg
 ;  rsg/agent/nao/nao.rsg
 
-; 6v6 formation for RoboCup 2010, Iran
-; the field length = 18; field width = 12
+; 9v9 formation for RoboCup 2011, Iran
+; the field length = 21; field width = 14
 (formation 2v2
 	   (player 1
 		   (robot rsg/agent/nao/nao.rsg)
 		   (type PT_GOALKEEPER)
-		   (beforeKickOffBeam -8.3 0 0)
-		   (ourGoalBeam -8.3 0 0)
-		   (oppGoalBeam -8.3 0 0)
-		   (oppGoalKick -8.3 0 0)
-		   (home -8.3 0 0)
-		   (attack -8 0 0)
-		   (defend -8.5 0 0)
+		   (beforeKickOffBeam -10 0 0)
+		   (ourGoalBeam -10 0 0)
+		   (oppGoalBeam -10 0 0)
+		   (oppGoalKick -10 0 0)
+		   (home -10 0 0)
+		   (attack -8.5 0 0)
+		   (defend -10.0 0 0)
 		   (attraction 0.1 0.2)
-		   (xRange -9 -7)
+		   (xRange -10.5 -7)
 		   (yRange -4 4)
 		   (behindBall 0.1)
 		   )
 	   (player 2
 		   (robot rsg/agent/nao/nao.rsg)
 		   (type PT_DEFENDER_CENTRAL)
-		   (beforeKickOffBeam -7 0 0)
-		   (ourGoalBeam -7 0 0)
-		   (oppGoalBeam -7 0 0)
-		   (oppGoalKick -7 0 0)
-		   (home -7 0 0)
-		   (attack -7 0 0)
-		   (defend -7 0 0)
+		   (beforeKickOffBeam -5.0 0 0)
+		   (ourGoalBeam -5 0 0)
+		   (oppGoalBeam -5 0 0)
+		   (oppGoalKick -5 0 0)
+		   (home -5 0 0)
+		   (attack -7.5 0 0)
+		   (defend -7.5 0 0)
 		   (attraction 0.2 0.5)
-		   (xRange -9 6)
-		   (yRange -6 6)
+		   (xRange -10.5 8)
+		   (yRange -7 7)
 		   (behindBall 0)
 		   )
 	   (player 3
+		   (robot rsg/agent/nao/nao.rsg)
+		   (type PT_DEFENDER_WING)
+		   (beforeKickOffBeam -7.3 1 0)
+		   (ourGoalBeam -7.3 1 0)
+		   (oppGoalBeam -7.3 1 0)
+		   (oppGoalKick -7.3 1 0)
+		   (home -7.3 1 0)
+		   (attack -2 3 0)
+		   (defend -2 3 0)
+		   (attraction 0.2 0.5)
+		   (xRange -10.5 8)
+		   (yRange -7 7)
+		   (behindBall 0)
+		   )
+            (player 4
+		   (robot rsg/agent/nao/nao.rsg)
+		   (type PT_DEFENDER_SWEEPER)
+		   (beforeKickOffBeam -7.3 -1 0)
+		   (ourGoalBeam -7.3 -1 0)
+		   (oppGoalBeam -7.3 -1 0)
+		   (oppGoalKick -7.3 -1 0)
+		   (home -7.3 -1 0)
+		   (attack -2 -3 0)
+		   (defend -2 -3 0)
+		   (attraction 0.2 0.5)
+		   (xRange -10.5 8)
+		   (yRange -7 7)
+		   (behindBall 0)
+		   )
+           (player 5
                    (robot rsg/agent/nao/nao.rsg)
 		   (type PT_MIDFIELDER_CENTER)
-		   (beforeKickOffBeam -3 -2 0)
-		   (ourGoalBeam -3 -2 0)
-		   (oppGoalBeam -0.2 -3 0)
-		   (oppGoalKick 2 -3 0)
-		   (home -3 -2  0)
-		   (attack 7 -2 0)
-		   (defend -3 -1 0)
-		   (attraction 0.2 0.3)
-		   (xRange -8 9)
-		   (yRange -6 6)
-		   (behindBall 0)
-		  
-		   )
-	   (player 4
-                   (robot rsg/agent/nao/nao.rsg)
-		   (type PT_ATTACKER_WING)
-		   (beforeKickOffBeam -1 2 0)
-		   (ourGoalBeam -1 2.5 0)
-		   (oppGoalBeam -0.2 3 0)
-		   (oppGoalKick 7 3 0)
-		   (home -3 2  0)
-		   (attack 7 2 0)
+		   (beforeKickOffBeam -5 3 0)
+		   (ourGoalBeam -5 3 0)
+		   (oppGoalBeam -5 3 0)
+		   (oppGoalKick -5 3 0)
+		   (home -5 3 0)
+		   (attack 7 1 0)
 		   (defend -3 1 0)
 		   (attraction 0.2 0.3)
-		   (xRange -8 9)
-		   (yRange -6 6)
+		   (xRange -10.5 10.5)
+		   (yRange -7 7)
 		   (behindBall 0)
-		  
 		   )
-	   (player 5
+	   (player 6
+                   (robot rsg/agent/nao/nao.rsg)
+		   (type PT_MIDFIELDER_SWEEPER)
+		   (beforeKickOffBeam -5 -3 0)
+		   (ourGoalBeam -5 -3 0)
+		   (oppGoalBeam -5 -3 0)
+		   (oppGoalKick -5 -3 0)
+		   (home -5 -3 0)
+		   (attack 9 -1 0)
+		   (defend -3 -1 0)
+		   (attraction 0.2 0.3)
+		   (xRange -10.5 10.5)
+		   (yRange -7 7)
+		   (behindBall 0)
+		   )
+	   (player 7
+                   (robot rsg/agent/nao/nao.rsg)
+		   (type PT_MIDFIELDER_WING)
+		   (beforeKickOffBeam -0.2 2 0)
+		   (ourGoalBeam -0.2 2 0)
+		   (oppGoalBeam -3 1.5 0)
+		   (oppGoalKick 7 2.5 0)
+		   (home 3 2.5  0)
+		   (attack 8 2.5 0)
+		   (defend 0 2.5 0)
+		   (attraction 0.2 0.3)
+		   (xRange -10 10.5)
+		   (yRange -7 7)
+		   (behindBall 0)
+
+		   )
+           (player 8
+                   (robot rsg/agent/nao/nao.rsg)
+		   (type PT_ATTACKER_WING)
+		   (beforeKickOffBeam -0.2 -2 0)
+		   (ourGoalBeam -3 -1.5 0)
+		   (oppGoalBeam -3 -1.5 0)
+		   (oppGoalKick 7 -2.5 0)
+		   (home 3 -2.5  0)
+		   (attack 9 -2.5 0)
+		   (defend 0 -2.5 0)
+		   (attraction 0.2 0.3)
+		   (xRange -10 10.5)
+		   (yRange -7 7)
+		   (behindBall 0)
+
+		   )
+	   (player 9
 		   (robot rsg/agent/nao/nao.rsg)
 		   (type PT_ATTACKER_CENTRAL)
-		   (beforeKickOffBeam -0.7 0 0)
-		   (ourGoalBeam -1 0 0)
+		   (beforeKickOffBeam -0.3 -0.2 0)
+		   (ourGoalBeam -2.1 0 0)
 		   (oppGoalBeam -0.2 -0.2 0)
 		   (oppGoalKick 7 -2 0)
-		   (home 6 -3 0)
-		   (attack 6 -2 0)
-		   (defend 6 -2 0)
+		   (home 7 0 0)
+		   (attack 9 0 0)
+		   (defend 3 0 0)
 		   (attraction 0.2 0.3)
-		   (xRange -8 9)
-		   (yRange -6 6)
+		   (xRange -9 11.5)
+		   (yRange -7 7)
 		   (behindBall 0)
 		   )
 )
