@@ -1,3 +1,7 @@
+2011-11-15 12:50 Zhao Bolu<zhaobl880704@gmail.com>
+seu3d-1.0.33
+modify authors 
+modify formation.conf,start.sh,etc. for 9 agents
 2011-11-14 15:06 Duan Pengfei<bestdpf@gmail.com>
 seu3d-1.0.32
 delete some chinese characters in the source code, i don't know how much
